--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,9 @@ a {
     border-bottom: 1px solid;
   }
 }
+h1,h2,h3,h4,h5,h6{
+  font-weight: normal;
+}
 body {
   font-size: 16px;
   // 为什么这样写 font-family
